# PortfolioOptimization

./: README.md  Single_Apple_data.ipynb  requirements.txt  run_multi_asset.py  run_multi_asset_risk.py  run_single_asset.py  run_single_asset_risk.py
LLM/: analyze_trading_log.py  apple_data.pkl  download_data.ipynb  pyproject.toml  trade.ipynb
MARL/: MARL.ipynb
MVO/: portfolio_dow30_analysis.ipynb
MVO/portfolio_results/: portfolio_weights.txt
Multi/: ddpg_baseline.ipynb  pyproject.toml  sac_baseline.ipynb
Single/: a2c_and_ppo.ipynb  rl_trading_metrics.py
Single/results/: model_metrics_summary.csv  risk_vs_baseline_model_metrics_summary.csv
config/: settings.py
data/: data_fetcher.py  feature_engineer.py
envs/: multi_asset_env.py
models/: evaluator.py  trainer.py
utils/: metrics.py
