[project]
name = "llm-trader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "llama-index-agent-openai>=0.4.7",
    "llama-index-core>=0.12.34.post1",
    "llama-index-llms-openai>=0.3.38",
    "llama-index-llms-openai-like>=0.3.4",
    "llama-index-tools-code-interpreter>=0.3.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "yahoofinancials>=1.20",
    "yfinance>=0.2.58",
]
